package de.homelabs.hlfileserver.entity;

public enum FSErrorCode {
	OK, GENERAL
}
