package de.homelabs.hlfileserver.entity;

public record FileserverProperties(
		String basePath) {
}
